--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,6 @@ body{
     background-color: rgb(150, 166, 180);
     font-family: 'Roboto', 'Source Sans Pro', sans-serif;
     flex-direction: column;
-    width: 100%;
 }
 
 header{
@@ -43,6 +42,7 @@ header{
 .fa-solid{
     color: rgb(37, 11, 11);
     font-size: large;
+    margin-right: 10px;
 }
 .list-nav{
     margin-bottom: 10px;
@@ -90,7 +90,7 @@ header{
 h2, h3{
     font-weight: 400;
     font-size: large;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Playfair Display', sans-serif;
 }
 
 .ourBrandsSection{
