--- a/styles/styles.css
+++ b/styles/styles.css
@@ -146,6 +146,7 @@ h2, h3{
 .mapContainer{
     display: flex;
     justify-content: center;
+    background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/leaves-pattern.png);
 }
 .map{
     margin-top: 20px;
@@ -200,9 +201,6 @@ footer{
 }
 
 @media (min-width: 1024px){
-    .sections:hover{
-        color: rgb(195, 133, 133);
-    }
     .brand{
         transition: all 1s;
     }
@@ -214,7 +212,10 @@ footer{
     .introductionSection{
         background: linear-gradient(90deg, rgb(172, 154, 154), rgb(172, 126, 126),rgb(177, 102, 102)) 
     }
-
+    .map{
+        height: 50vh;
+        width: 60vw;
+        }
 }
 
 
@@ -246,6 +247,59 @@ footer{
 
 
 /* Acerca */
+
+.all-about{
+    background-image: url(https://www.wallpapertip.com/wmimgs/9-94032_iron-man-wallpaper-4k.jpg);
+    height: 75rem;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    flex-wrap: wrap;
+}
+
+.text-allAbout{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    color: rgb(222, 107, 154);
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    padding: 4rem 0rem 4rem 0rem;
+    display: flex;
+    justify-content: center;
+}
+
+.paragraph-allAbout{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0rem 15rem 0rem 15rem;
+}
+
+.paragraph-container{
+    margin: 2rem 0rem 2rem 0rem;
+    font-size: large;
+    text-align: center;
+}
+.paragraph{
+    padding: 1rem;
+    border: 2px solid rgb(222, 107, 154);
+    border-radius: 1rem;
+    background-color: rgba(255, 255, 255, 0.856);
+}
+.aboutUs-photos{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.owner-photo{
+    width: 25rem;
+    height: 25rem;
+}
+.coderhouse{
+    height: 6rem;
+}
+
+
 
 /* Contacto */
 
