--- a/styles/abstracts/_variables.scss
+++ b/styles/abstracts/_variables.scss
@@ -1,6 +1,10 @@
-/* colors */
 $grey: rgb(150, 166, 180);
-
-/* fonts */
 $body-font: 'Roboto', 'Source Sans Pro', sans-serif;
 $h2-h3-fonts: 'Playfair Display', sans-serif;
+$stylesMainHeading:(
+    negrita: 400,
+    mayus: uppercase,
+    ubicación: center,
+    bottommargin: 10px,
+);
+
