--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,14 +7,37 @@
 
 body {
   background-color: #96a6b4;
-  font-family: 'Roboto', 'Source Sans Pro', sans-serif;
+  font-family: "Roboto", "Source Sans Pro", sans-serif;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
 }
 
-header {
+h2, h3 {
+  margin-bottom: 0;
+  font-weight: 600;
+  font-size: large;
+  font-family: "Playfair Display", sans-serif;
+  letter-spacing: 5px;
+}
+
+.wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: "navbar1"
+ "main"
+ "footer";
+}
+
+.navbar1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: navbar1;
   font-family: 'Roboto', sans-serif;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -22,23 +45,14 @@ header {
           flex-direction: column;
 }
 
-.navbar {
+.navbar1 .navbar {
   background-color: white;
 }
 
-.fa-solid {
-  color: #250b0b;
-  font-size: large;
-  margin-right: 10px;
-}
-
-.list-nav {
-  margin-bottom: 10px;
-}
-
-.sections {
-  text-decoration: none;
-  color: black;
+.main {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: main;
 }
 
 .introductionSection {
@@ -57,7 +71,7 @@ header {
   height: 450px;
 }
 
-.introduction {
+.introductionSection .introduction {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -75,26 +89,16 @@ header {
   color: black;
 }
 
-.mainHeading {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-  text-transform: uppercase;
+.introductionSection .introduction .mainHeading {
   font-weight: 400;
+  text-transform: uppercase;
+  text-align: center;
   margin-bottom: 10px;
 }
 
-.slogan {
+.introductionSection .introduction .slogan {
   font-size: 20px;
   font-weight: 600;
-}
-
-h2, h3 {
-  margin-bottom: 0;
-  font-weight: 600;
-  font-size: large;
-  font-family: 'Playfair Display', sans-serif;
-  letter-spacing: 5px;
 }
 
 .ourBrandsSection {
@@ -108,7 +112,7 @@ h2, h3 {
   height: auto;
 }
 
-.ourBrands {
+.ourBrandsSection .ourBrands {
   padding: 15px;
   color: black;
   text-align: center;
@@ -116,7 +120,7 @@ h2, h3 {
   background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/45degreee_fabric.png);
 }
 
-.imgs {
+.ourBrandsSection .imgs {
   background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/45degreee_fabric.png);
   background-attachment: scroll;
   height: 50rem;
@@ -131,7 +135,7 @@ h2, h3 {
       align-content: center;
 }
 
-.brand {
+.ourBrandsSection .imgs .brand {
   margin: 10px;
   width: 200px;
   height: 200px;
@@ -143,7 +147,7 @@ h2, h3 {
   background-color: white;
 }
 
-.someProducts {
+.someProductsSection .someProducts {
   font-size: 30px;
   text-align: center;
   padding: 15px;
@@ -151,7 +155,7 @@ h2, h3 {
   background-color: white;
 }
 
-.productsImages {
+.someProductsSection .productsImages {
   padding: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -164,7 +168,7 @@ h2, h3 {
   background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/45degreee_fabric.png);
 }
 
-.products {
+.someProductsSection .productsImages .products {
   margin: 1rem;
   width: 270px;
   height: 600px;
@@ -172,7 +176,7 @@ h2, h3 {
           box-shadow: 2px 2px 20px #333;
 }
 
-.location {
+.locationSection .location {
   text-align: center;
   text-transform: uppercase;
   padding: 15px;
@@ -180,7 +184,7 @@ h2, h3 {
   background-color: white;
 }
 
-.mapContainer {
+.locationSection .mapContainer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -190,19 +194,23 @@ h2, h3 {
   background-image: url(https://www.toptal.com/designers/subtlepatterns/uploads/leaves-pattern.png);
 }
 
-.map {
+.locationSection .mapContainer .map {
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
-footer {
+.footer {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: footer;
+  margin-bottom: 0;
   text-align: center;
   padding: 20px;
   background-color: whitesmoke;
   margin-bottom: 0;
 }
 
-.footerIcons {
+.footer .footerIcons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -210,46 +218,9 @@ footer {
       justify-content: space-around;
 }
 
-.iconosFooter {
+.footer .footerIcons .iconosFooter {
   width: 35px;
   height: 35px;
-}
-
-.navbar1 {
-  -ms-grid-row: 1;
-  grid-row:1;
-  -ms-grid-column: 1;
-  grid-column:1;
-  grid-area: navbar1;
-}
-
-.main {
-  -ms-grid-row: 2;
-  grid-row: 2;
-  -ms-grid-column: 1;
-  grid-column: 1;
-  grid-area: main;
-}
-
-.footer {
-  -ms-grid-row: 3;
-  grid-row: 3;
-  -ms-grid-column: 1;
-  grid-column: 1;
-  grid-area: footer;
-  margin-bottom: 0;
-}
-
-.wrapper {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr;
-      grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr;
-      grid-template-rows: 1fr;
-      grid-template-areas: "navbar1"
- "main"
- "footer";
 }
 
 @media (min-width: 768px) {
@@ -282,7 +253,61 @@ footer {
   }
 }
 
-/* Productos */
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #96a6b4;
+  font-family: "Roboto", "Source Sans Pro", sans-serif;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+h2, h3 {
+  margin-bottom: 0;
+  font-weight: 600;
+  font-size: large;
+  font-family: "Playfair Display", sans-serif;
+  letter-spacing: 5px;
+}
+
+.wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: "navbar1"
+ "main"
+ "footer";
+}
+
+.navbar1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: navbar1;
+  font-family: 'Roboto', sans-serif;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.navbar1 .navbar {
+  background-color: white;
+}
+
+.main {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: main;
+}
+
 .ourProductsText {
   background: -webkit-gradient(linear, left top, right top, from(#ffcfcf), color-stop(#cfafaf), to(#ff9e9e));
   background: linear-gradient(90deg, #ffcfcf, #cfafaf, #ff9e9e);
@@ -299,7 +324,7 @@ footer {
   text-transform: uppercase;
 }
 
-.productsText {
+.ourProductsText .productsText {
   font-weight: bold;
   padding: 10px;
   border: 1px solid rgba(0, 0, 0, 0);
@@ -307,18 +332,125 @@ footer {
   background-color: rgba(255, 255, 255, 0.5);
 }
 
-/* Promociones */
-.coming-soon {
+.ourProductsText .coming-soon {
   margin: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
-/* Acerca */
+.footer {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: footer;
+  margin-bottom: 0;
+  text-align: center;
+  padding: 20px;
+  background-color: whitesmoke;
+  margin-bottom: 0;
+}
+
+.footer .footerIcons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.footer .footerIcons .iconosFooter {
+  width: 35px;
+  height: 35px;
+}
+
+@media (min-width: 768px) {
+  .mainLogo {
+    margin-left: 40px;
+    margin-bottom: 30px;
+  }
+  .list-nav {
+    margin-bottom: 0px;
+    margin-right: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .brand {
+    -webkit-transition: all 1s;
+    transition: all 1s;
+  }
+  .brand:hover {
+    width: 300px;
+    height: 300px;
+  }
+  .introductionSection {
+    background: -webkit-gradient(linear, left top, right top, from(#ac9a9a), color-stop(#ac7e7e), to(#b16666));
+    background: linear-gradient(90deg, #ac9a9a, #ac7e7e, #b16666);
+  }
+  .map {
+    height: 50vh;
+    width: 60vw;
+  }
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #96a6b4;
+  font-family: "Roboto", "Source Sans Pro", sans-serif;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+h2, h3 {
+  margin-bottom: 0;
+  font-weight: 600;
+  font-size: large;
+  font-family: "Playfair Display", sans-serif;
+  letter-spacing: 5px;
+}
+
+.wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: "navbar1"
+ "main"
+ "footer";
+}
+
+.navbar1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: navbar1;
+  font-family: 'Roboto', sans-serif;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.navbar1 .navbar {
+  background-color: white;
+}
+
+.main {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: main;
+}
+
 .all-about {
   background-image: url(https://www.wallpapertip.com/wmimgs/9-94032_iron-man-wallpaper-4k.jpg);
   height: 75rem;
@@ -328,7 +460,7 @@ footer {
       flex-wrap: wrap;
 }
 
-.text-allAbout {
+.all-about .text-allAbout {
   font-family: Georgia, 'Times New Roman', Times, serif;
   color: #de6b9a;
   text-transform: uppercase;
@@ -342,7 +474,7 @@ footer {
           justify-content: center;
 }
 
-.paragraph-allAbout {
+.all-about .paragraph-allAbout {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -364,7 +496,7 @@ footer {
   text-align: center;
 }
 
-.paragraph {
+.paragraph-container .paragraph {
   padding: 1rem;
   border: 2px solid #de6b9a;
   border-radius: 1rem;
@@ -386,13 +518,174 @@ footer {
           align-items: center;
 }
 
-.owner-photo {
+.aboutUs-photos .owner-photo {
   width: 25rem;
   height: 25rem;
 }
 
-.coderhouse {
+.aboutUs-photos .coderhouse {
   height: 6rem;
 }
 
-/* Contacto */
+.footer {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: footer;
+  margin-bottom: 0;
+  text-align: center;
+  padding: 20px;
+  background-color: whitesmoke;
+  margin-bottom: 0;
+}
+
+.footer .footerIcons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.footer .footerIcons .iconosFooter {
+  width: 35px;
+  height: 35px;
+}
+
+@media (min-width: 768px) {
+  .mainLogo {
+    margin-left: 40px;
+    margin-bottom: 30px;
+  }
+  .list-nav {
+    margin-bottom: 0px;
+    margin-right: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .brand {
+    -webkit-transition: all 1s;
+    transition: all 1s;
+  }
+  .brand:hover {
+    width: 300px;
+    height: 300px;
+  }
+  .introductionSection {
+    background: -webkit-gradient(linear, left top, right top, from(#ac9a9a), color-stop(#ac7e7e), to(#b16666));
+    background: linear-gradient(90deg, #ac9a9a, #ac7e7e, #b16666);
+  }
+  .map {
+    height: 50vh;
+    width: 60vw;
+  }
+}
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #96a6b4;
+  font-family: "Roboto", "Source Sans Pro", sans-serif;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+h2, h3 {
+  margin-bottom: 0;
+  font-weight: 600;
+  font-size: large;
+  font-family: "Playfair Display", sans-serif;
+  letter-spacing: 5px;
+}
+
+.wrapper {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+      grid-template-areas: "navbar1"
+ "main"
+ "footer";
+}
+
+.navbar1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  grid-area: navbar1;
+  font-family: 'Roboto', sans-serif;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.navbar1 .navbar {
+  background-color: white;
+}
+
+.main {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: main;
+}
+
+.footer {
+  -ms-grid-row: 3;
+  -ms-grid-column: 1;
+  grid-area: footer;
+  margin-bottom: 0;
+  text-align: center;
+  padding: 20px;
+  background-color: whitesmoke;
+  margin-bottom: 0;
+}
+
+.footer .footerIcons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.footer .footerIcons .iconosFooter {
+  width: 35px;
+  height: 35px;
+}
+
+@media (min-width: 768px) {
+  .mainLogo {
+    margin-left: 40px;
+    margin-bottom: 30px;
+  }
+  .list-nav {
+    margin-bottom: 0px;
+    margin-right: 15px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .brand {
+    -webkit-transition: all 1s;
+    transition: all 1s;
+  }
+  .brand:hover {
+    width: 300px;
+    height: 300px;
+  }
+  .introductionSection {
+    background: -webkit-gradient(linear, left top, right top, from(#ac9a9a), color-stop(#ac7e7e), to(#b16666));
+    background: linear-gradient(90deg, #ac9a9a, #ac7e7e, #b16666);
+  }
+  .map {
+    height: 50vh;
+    width: 60vw;
+  }
+}
